--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
 }
 
 .cabecalho {
-    background-image: url(img/background2.png);
+    /*background-image: url(img/background2.png);*/
     background-repeat: no-repeat;
     background-size: contain ;
 }
@@ -239,6 +239,7 @@ footer{
         align-items: center;
         text-align: center;
         font-size: 16px;
+        opacity: 1;
     }
 
     .logo {
@@ -258,7 +259,8 @@ footer{
     }
 
     .cabecalho {
-        background-size: cover;
+        background-size: contain;
+        background-image: url("./img/background.png");        
     }
 
     .solucao {
